--- a/springbootbasis/src/main/resources/application.properties
+++ b/springbootbasis/src/main/resources/application.properties
@@ -5,11 +5,11 @@ local.server.port=9000
 user.aa.id = 1
 user.aa.name =zhangsan
 
-#ÈÕÖ¾
+#ï¿½ï¿½Ö¾
 #logging.pattern.console=haha %-12(%d{yyyy-MM-dd HH:mm:ss.SSS}) |-%-5level [%thread] %c [%L] -| %msg%n
 #logging.pattern.file=hehe %-12(%d{yyyy-MM-dd HH:mm:ss.SSS}) |-%-5level [%thread] %c [%L] -| %msg%n
 
-#ELKÅäÖÃ
+#ELKï¿½ï¿½ï¿½ï¿½
 log4j.rootLogger=INFO,console
 
 # for package com.demo.elk, log would be sent to socket appender.
@@ -35,7 +35,7 @@ log4j.appender.console.layout.ConversionPattern=%d [%-5p] [%l] %m%n
 #logging.path= D:/logs
 #logging.file=springlog.log
 
-# Êý¾ÝÔ´ÅäÖÃ
+# ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
@@ -44,28 +44,34 @@ spring.datasource.password=root
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.springbootbasis.component
 
-######### Í¨ÓÃMapper ##########
-# Ö÷¼ü×ÔÔö»ØÐ´·½·¨,Ä¬ÈÏÖµMYSQL,ÏêÏ¸ËµÃ÷Çë¿´ÎÄµµ
+######### Í¨ï¿½ï¿½Mapper ##########
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð´ï¿½ï¿½ï¿½ï¿½,Ä¬ï¿½ï¿½ÖµMYSQL,ï¿½ï¿½Ï¸Ëµï¿½ï¿½ï¿½ë¿´ï¿½Äµï¿½
 mapper.identity=MYSQL
 mapper.mappers=com.example.springbootbasis.mapper.BaseMapper
-# ÉèÖÃ insert ºÍ update ÖÐ£¬ÊÇ·ñÅÐ¶Ï×Ö·û´®ÀàÐÍ!=''
+# ï¿½ï¿½ï¿½ï¿½ insert ï¿½ï¿½ update ï¿½Ð£ï¿½ï¿½Ç·ï¿½ï¿½Ð¶ï¿½ï¿½Ö·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½!=''
 #mapper.not-empty=true
-# Ã¶¾Ù°´¼òµ¥ÀàÐÍ´¦Àí
+# Ã¶ï¿½Ù°ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Í´ï¿½ï¿½ï¿½
 #mapper.enum-as-simple-type=true
 
 
 spring.cache.type=redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+# ï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ä£¨ï¿½ï¿½ï¿½ë£©
 spring.redis.timeout=10000
-# RedisÄ¬ÈÏÇé¿öÏÂÓÐ16¸ö·ÖÆ¬£¬ÕâÀïÅäÖÃ¾ßÌåÊ¹ÓÃµÄ·ÖÆ¬£¬Ä¬ÈÏÊÇ0
+# RedisÄ¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½16ï¿½ï¿½ï¿½ï¿½Æ¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã¾ï¿½ï¿½ï¿½Ê¹ï¿½ÃµÄ·ï¿½Æ¬ï¿½ï¿½Ä¬ï¿½ï¿½ï¿½ï¿½0
 spring.redis.database=0
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£© Ä¬ÈÏ 8
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½ Ä¬ï¿½ï¿½ 8
 spring.redis.lettuce.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ýÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£© Ä¬ÈÏ -1
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½ Ä¬ï¿½ï¿½ -1
 spring.redis.lettuce.pool.max-wait=-1
-# Á¬½Ó³ØÖÐµÄ×î´ó¿ÕÏÐÁ¬½Ó Ä¬ÈÏ 8
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½ 8
 spring.redis.lettuce.pool.max-idle=8
-# Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó Ä¬ÈÏ 0
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½ 0
 spring.redis.lettuce.pool.min-idle=0
+
+#mapper:
+#  mappers:
+#    - com.example.springbootbasis.mapper.UserMapper
+
+aa.bb=1
